<resources>
    <string name="app_name">Reto2Moviles</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contraseña</string>
    <string name="notienescuenta">No tienes una cuenta?</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciarsesion">Inicia Sesion</string>
    <string name="registro">Nuevo Registro</string>


    <string name="toasterrorsesion">No has introducido los datos correctos</string>
    <string name="toasterrorvacio">Hay Campos sin rellenar</string>

    <string name="botonvolver">Volver</string>

    <string name="botonconsultas">Consultas</string>

    <string name="botongooglemaps">Google Maps</string>

    <string name="botoncamara">Camara</string>

    <string name="botonsacarfoto">Sacar Foto</string>

    <string name="ConsultaBuscar">Buscar</string>

    <string name="SpinnerConsulta">Elige una opcion</string>
    <string name="txtProvincia">Provincia</string>
    <string name="txtProvincias">Provincias</string>
    <string name="txtPueblos">Pueblos</string>
    <string name="txtEstaciones">Estaciones</string>
    <string name="txtFecha">Fecha</string>
    <string name="txtHora">Hora</string>
    <string name="txtSubirFoto">Subir Foto</string>
    <string name="txtSeleccionarFoto">Seleccionar Foto</string>
    <string name="txtOpciones">Opciones</string>

    <string-array name="Municipio_espacio">
        <item>Espacios Naturales</item>
        <item>Municipio</item>
    </string-array>
    <string name="title_activity_listar">ListarActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>