<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasedatosActivity">

    <Spinner
        android:id="@+id/spinner5"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="20dp"
        android:contextClickable="false"
        android:tooltipText="@string/SpinnerConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="74dp"
        android:text="@string/txtHora"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner5"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="58dp"
        android:text="@string/txtFecha"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:contextClickable="false"
        android:tooltipText="@string/SpinnerConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtEstaciones"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner2"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Spinner
        android:id="@+id/spinner3"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:contextClickable="false"
        android:tooltipText="@string/SpinnerConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="42dp"
        android:text="@string/txtPueblos"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner3"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="16dp"
        android:text="@string/txtProvincias"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:contextClickable="false"
        android:tooltipText="@string/SpinnerConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="152dp"
        android:text="@string/botonconsultas"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="246dp"
        android:layout_height="66dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:contextClickable="false"
        android:tooltipText="@string/SpinnerConsulta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="51dp"
        android:onClick="volver"
        android:text="@string/botonvolver"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/spinner5"
        tools:text="@string/botonvolver" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="108dp"
        android:onClick="Buscar"
        android:text="@string/ConsultaBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner5"
        tools:text="@string/ConsultaBuscar" />

</androidx.constraintlayout.widget.ConstraintLayout>