<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CamaraActivity">

    <Button
        android:id="@+id/btn_sacarfoto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:onClick="volver"
        android:text="@string/botonvolver"
        app:layout_constraintEnd_toStartOf="@+id/btn_sacarfoto"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sacarfoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:onClick="opciones"
        android:text="@string/txtOpciones"
        app:layout_constraintEnd_toStartOf="@+id/btn_sacarfoto2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sacarfoto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="Sacarfoto"
        android:text="@string/botonsacarfoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="391dp"
        android:layout_height="620dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="25dp"

        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>